Версия без Редактирования паролей и Хэширования (Добавил авторизацию)

--- a/HospiFication/Views/Home/AddNotification.cshtml
+++ b/HospiFication/Views/Home/AddNotification.cshtml
@@ -11,13 +11,13 @@
         </div>
 
         <div class="form-group">
-            <label asp-for="PatientID" hidden="true" class="control-label">ID пациента</label>
-            <input type="text" asp-for="PatientID" hidden="true" class="form-control" />
+            <label asp-for="PID" hidden="true" class="control-label">ID пациента</label>
+            <input type="text" asp-for="PID" hidden="true" class="form-control" />
         </div>
 
         <div class="form-group">
-            <label asp-for="RelativeID" class="control-label" hidden="true" >ID родственника</label>
-            <input type="text" asp-for="RelativeID" hidden="true" class="form-control" />
+            <label asp-for="RID" class="control-label" hidden="true" >ID родственника</label>
+            <input type="text" asp-for="RID" hidden="true" class="form-control" />
         </div>
 
         <div class="form-group">
