--- a/HospiFication/Views/Home/Notifications.cshtml
+++ b/HospiFication/Views/Home/Notifications.cshtml
@@ -20,8 +20,8 @@
         <tr>
             <td>@p.NotificationId</td>
             <td>@p.ExtractionID</td>
-            <td>@p.PatientID</td>
-            <td>@p.RelativeID</td>
+            <td>@p.PID</td>
+            <td>@p.RID</td>
             <td>@p.NotificationText</td>
         </tr>
      }
