--- a/HospiFication/Views/Home/Login.cshtml
+++ b/HospiFication/Views/Home/Login.cshtml
@@ -1,24 +1,22 @@
-﻿@model HospiFication.Models.AttendingDoc
-
-@{
-    ViewData["Title"] = "Login";
-}
-
-<h1>Login</h1>
-
-    <form asp-action="Login" asp-controller="home" method="post" enctype="multipart/form-data">
-        
+﻿@model HospiFication.Models.LoginModel
+ 
+<h2>Вход на сайт</h2>
+  
+<form asp-action="Login" asp-controller="Home" asp-anti-forgery="true">
+    <div class="validation" asp-validation-summary="ModelOnly"></div>
+    <div>
         <div class="form-group">
-            <label asp-for="Attending_Doc_FIO" class="control-label">Имя пользователя</label>
-            <input type="text" asp-for="Attending_Doc_FIO" class="form-control" />
+            <label asp-for="UserName">Введите имя пользователя</label>
+            <input type="text" asp-for="UserName" />
+            <span asp-validation-for="UserName" />
         </div>
-
         <div class="form-group">
-            <label asp-for="Password" class="control-label">Пароль</label>
-            <input type="text" asp-for="Password" class="form-control" />
+            <label asp-for="Password">Введите пароль</label>
+            <input asp-for="Password" />
+            <span asp-validation-for="Password" />
         </div>
-
         <div class="form-group">
-            <input type="submit" value="Войти" class="btn btn-default" />
+            <input type="submit" value="Войти" class="btn" />
         </div>
-    </form>
+    </div>
+</form>
