Сделал редактирование пароля, версия без хэширования паролей

--- a/HospiFication/Views/Home/AttendDocs.cshtml
+++ b/HospiFication/Views/Home/AttendDocs.cshtml
@@ -69,6 +69,9 @@
             <td>
                 <a asp-action="DeleteAttend" asp-controller="Home" asp-route-id="@p.AttendingDocID">Удалить</a>|
             </td>
+            <td>
+                <a asp-action="EditAttendDocPass" asp-controller="Home" asp-route-id="@p.AttendingDocID">Смена пароля</a>|
+            </td>
         </tr>
      }
     </table>
