--- a/HospiFication/Views/Home/EmergeDocs.cshtml
+++ b/HospiFication/Views/Home/EmergeDocs.cshtml
@@ -65,6 +65,9 @@
             <td>
                 <a asp-action="DeleteEmerge" asp-controller="Home" asp-route-id="@p.EmergencyDocID">Удалить</a>|
             </td>
+            <td>
+                <a asp-action="EditEmergeDocPass" asp-controller="Home" asp-route-id="@p.EmergencyDocID">Смена пароля</a>|
+            </td>
         </tr>
      }
     </table>
