--- a/HospiFication/Views/Home/EditEmergeDocPass.cshtml
+++ b/HospiFication/Views/Home/EditEmergeDocPass.cshtml
@@ -17,3 +17,7 @@
         <input type="submit" value="Сохранить" class="btn btn-default" />
     </div>
 </form>
+
+        <div class="form-group">
+            <a asp-action="EmergeDocs" class="btn btn-primary">Назад</a>
+        </div>
