--- a/HospiFication/Views/Home/AddPatient.cshtml
+++ b/HospiFication/Views/Home/AddPatient.cshtml
@@ -36,7 +36,7 @@
         </div>
 
          <div>
-            <label asp-for="AttendingDocID"></label>
+            <label asp-for="AttendingDocID">Лечащий врач:   </label>
             <select asp-for="AttendingDocID" asp-items="Model.AttendingDocIDs"></select>
         </div>
 
