--- a/HospiFication/Views/Home/EditAttendDocPass.cshtml
+++ b/HospiFication/Views/Home/EditAttendDocPass.cshtml
@@ -17,3 +17,6 @@
         <input type="submit" value="Сохранить" class="btn btn-default" />
     </div>
 </form>
+        <div class="form-group">
+            <a asp-action="AttendDocs" class="btn btn-primary">Назад</a>
+        </div>
