Изменил цвета таблиц

--- a/HospiFication/Views/Home/AttendDocs.cshtml
+++ b/HospiFication/Views/Home/AttendDocs.cshtml
@@ -45,7 +45,7 @@
     </p>
 </form>
 
-<table class="table" border="1" cellspacing="0" bgcolor="#e6f1fc">
+<table class="table" border="1" cellspacing="0" bgcolor="#ffe4e1">
     <tr>
         <th>
             <a asp-action="AttendDocs" asp-route-page="1" asp-route-sortOrder="@ViewBag.IDSort">
