--- a/HospiFication/Views/Home/Index.cshtml
+++ b/HospiFication/Views/Home/Index.cshtml
@@ -64,7 +64,7 @@
 	</form>
 
 
-	<table class="table" border="1" cellspacing="0" bgcolor="#e6f1fc">
+	<table class="table" border="1" cellspacing="0" bgcolor="#ffe4e1">
         <tr>
             <th>ID_Авто</th>
             <th>Марка</th>
