--- a/HospiFication/Views/Home/EmergeDocs.cshtml
+++ b/HospiFication/Views/Home/EmergeDocs.cshtml
@@ -41,7 +41,7 @@
     </p>
 </form>
 
-<table class="table" border="1" cellspacing="0" bgcolor="#e6f1fc">
+<table class="table" border="1" cellspacing="0" bgcolor="#ffe4e1">
     <tr>
         <th>
             <a asp-action="EmergeDocs" asp-route-sortOrder="@ViewBag.IDSort" asp-route-page="1">
