--- a/HospiFication/Views/Home/Extractions.cshtml
+++ b/HospiFication/Views/Home/Extractions.cshtml
@@ -6,7 +6,7 @@
 
 <h1>Выписка</h1>
 
-<table class="table" border="1" cellspacing="0" bgcolor="#e6f1fc">
+<table class="table" border="1" cellspacing="0" bgcolor="#ffe4e1">
     <tr>
         <th>ID выписки</th>
         <th>Дата выписки</th>
