--- a/HospiFication/Views/Home/Patients.cshtml
+++ b/HospiFication/Views/Home/Patients.cshtml
@@ -46,7 +46,7 @@
             
 </form>
 
-<table class="table" border="1" cellspacing="0" bgcolor="#e6f1fc">
+<table class="table" border="1" cellspacing="0" bgcolor="#ffe4e1">
     <tr>
         <th>
             <a asp-action="Patients" asp-route-page="1" asp-route-sortOrder="@ViewBag.IDSort">
