--- a/HospiFication/Views/Home/Extractions.cshtml
+++ b/HospiFication/Views/Home/Extractions.cshtml
@@ -6,13 +6,14 @@
 
 <h1>Выписка</h1>
 
-<table class="table" border="1" cellspacing="0" bgcolor="#ffe4e1">
+<table class="table" border="3" cellspacing="0">
     <tr>
-        <th>ID выписки</th>
-        <th>Дата выписки</th>
-        <th>ID пациента</th>
-        <th>ID Лечащего врача</th>
-        <th>Заключение</th>
+        <th bgcolor="#ffe4e1">ID выписки</th>
+        <th bgcolor="#ffe4e1">Дата выписки</th>
+        <th bgcolor="#ffe4e1">ID пациента</th>
+        <th bgcolor="#ffe4e1">ID Лечащего врача</th>
+        <th bgcolor="#ffe4e1">Заключение</th>
+        <th bgcolor="#ffe4e1"></th>   
     </tr>
 
     @foreach (Extraction p in Model.Extractions)
