--- a/HospiFication/Views/Home/Notifications.cshtml
+++ b/HospiFication/Views/Home/Notifications.cshtml
@@ -6,13 +6,13 @@
 
 <h1>Уведомления</h1>
 
-<table class="table" border="1" cellspacing="0" bgcolor="#ffe4e1">
+<table class="table" border="3" cellspacing="0" >
     <tr>
-        <th>ID уведомления</th>
-        <th>ID выписки</th>
-        <th>ID пациента</th>
-        <th>ID родственника</th>
-        <th>Текст уведомления</th>
+        <th bgcolor="#ffe4e1">ID уведомления </th> 
+        <th bgcolor="#ffe4e1">ID выписки</th>
+        <th bgcolor="#ffe4e1">ID пациента</th>
+        <th bgcolor="#ffe4e1">ID родственника</th>
+        <th bgcolor="#ffe4e1">Текст уведомления</th>
     </tr>
 
     @foreach (Notification p in Model.Notifications)
