--- a/HospiFication/Views/Home/Relatives.cshtml
+++ b/HospiFication/Views/Home/Relatives.cshtml
@@ -6,14 +6,14 @@
 
 <h1>Родственники</h1>
 
-<table class="table" border="1" cellspacing="0" bgcolor="#ffe4e1">
+<table class="table" border="3" cellspacing="0">
     <tr>
-        <th>ID родственника</th>
-        <th>ID пациента</th>
-        <th>ФИО родственника</th>
-        <th>Телефон родственника</th>
-        <th>Почта родственника</th>
-        <th>Степень родства</th>
+        <th bgcolor="#ffe4e1">ID родственника</th>
+        <th bgcolor="#ffe4e1">ID пациента</th>
+        <th bgcolor="#ffe4e1">ФИО родственника</th>
+        <th bgcolor="#ffe4e1">Телефон родственника</th>
+        <th bgcolor="#ffe4e1">Почта родственника</th>
+        <th bgcolor="#ffe4e1">Степень родства</th>
 
     </tr>
 
