--- a/HospiFication/Views/Home/EmergeDocs.cshtml
+++ b/HospiFication/Views/Home/EmergeDocs.cshtml
@@ -41,19 +41,21 @@
     </p>
 </form>
 
-<table class="table" border="1" cellspacing="0" bgcolor="#ffe4e1">
+<table class="table" border="3" cellspacing="0">
     <tr>
-        <th>
+        <th bgcolor="#ffe4e1">
             <a asp-action="EmergeDocs" asp-route-sortOrder="@ViewBag.IDSort" asp-route-page="1">
                 ID Врача
             </a>
         </th>
-        <th>
+        <th bgcolor="#ffe4e1">
             <a asp-action="EmergeDocs" asp-route-sortOrder="@ViewBag.FIOSort" asp-route-page="1">
                 ФИО врача приёмного отделения
             </a>
         </th>
-        <th>Пароль (в зашифрованном виде)</th>
+        <th bgcolor="#ffe4e1">Пароль (в зашифрованном виде)</th>
+        <th bgcolor="#ffe4e1"></th>   
+        <th bgcolor="#ffe4e1"></th>
     </tr>
 
     @foreach (EmergencyDoc p in Model.EmergencyDocs)
