--- a/HospiFication/Views/Home/Patients.cshtml
+++ b/HospiFication/Views/Home/Patients.cshtml
@@ -46,28 +46,31 @@
             
 </form>
 
-<table class="table" border="1" cellspacing="0" bgcolor="#ffe4e1">
+<table class="table" border="3" cellspacing="0">
     <tr>
-        <th>
+        <th bgcolor="#ffe4e1">
             <a asp-action="Patients" asp-route-page="1" asp-route-sortOrder="@ViewBag.IDSort">
                 ID пациента
             </a>
         </th>
-        <th>            
+        <th bgcolor="#ffe4e1">            
             <a asp-action="Patients" asp-route-page="1" asp-route-sortOrder="@ViewBag.FIOSort">
                 ФИО пациента
             </a>
         </th>
-        <th>Дата рождения пациента</th>
-        <th>ID Лечащего врача</th>
-        <th>Симптомы</th>
-        <th>            
+        <th bgcolor="#ffe4e1">Дата рождения пациента</th>
+        <th bgcolor="#ffe4e1">ID Лечащего врача</th>
+        <th bgcolor="#ffe4e1">Симптомы</th>
+        <th bgcolor="#ffe4e1">            
             <a asp-action="Patients" asp-route-page="1" asp-route-sortOrder="@ViewBag.ExtraSort">
                 Выписан
             </a>
         </th>
-        <th>Дата госпитализации</th>
-        <th>ID врача приёмного отделения</th>
+        <th bgcolor="#ffe4e1">Дата госпитализации</th>
+        <th bgcolor="#ffe4e1">ID врача приёмного отделения</th>
+        <th bgcolor="#ffe4e1"></th>   
+        <th bgcolor="#ffe4e1"></th>
+        <th bgcolor="#ffe4e1"></th>   
     </tr>
 
     @foreach (Patient p in Model.Patients)
