--- a/HospiFication/Views/Home/AddRelative.cshtml
+++ b/HospiFication/Views/Home/AddRelative.cshtml
@@ -38,6 +38,6 @@
             <input type="submit" value="Сохранить" formaction="SaveRelative" class="btn btn-default" />
         </div>
         <div class="form-group">
-            <a asp-action="Index" class="btn btn-primary">Без добавления родственников</a>
+            <a asp-action="Index" class="btn btn-primary">На главную</a>
         </div>
     </form>
