--- a/HospiFication/Views/Home/AddEmergeDocUser.cshtml
+++ b/HospiFication/Views/Home/AddEmergeDocUser.cshtml
@@ -24,7 +24,7 @@
         </div>
 
         <div class="form-group">
-            <input type="submit" value="Отправить" class="btn btn-default" />
+            <input type="submit" value="Отправить" class="btn btn-light" />
         </div>
         <div class="form-group">
             <a asp-action="EmergeDocs" class="btn btn-primary">Назад</a>
