--- a/HospiFication/Views/Home/AddRelative.cshtml
+++ b/HospiFication/Views/Home/AddRelative.cshtml
@@ -31,11 +31,11 @@
         </div>
 
         <div class="form-group">
-            <input type="submit" value="Сохранить и добавить" formaction="SaveAndAddRelative" class="btn btn-default" />
+            <input type="submit" value="Сохранить и добавить" formaction="SaveAndAddRelative" class="btn btn-light" />
         </div>
 
         <div class="form-group">
-            <input type="submit" value="Сохранить" formaction="SaveRelative" class="btn btn-default" />
+            <input type="submit" value="Сохранить" formaction="SaveRelative" class="btn btn-light" />
         </div>
         <div class="form-group">
             <a asp-action="Index" class="btn btn-primary">На главную</a>
