--- a/HospiFication/Views/Home/Privacy.cshtml
+++ b/HospiFication/Views/Home/Privacy.cshtml
@@ -3,4 +3,4 @@
 }
 <h1>@ViewData["Title"]</h1>
 
-<p>Разработал Мухаррямов Наиль Ниязович 2181121 в качестве выпускной квалификационной работы.</p>
+<p>Разработал Мухаррямов Наиль Ниязович студент группы 2221360 в качестве выпускной квалификационной работы.</p>
