--- a/HospiFication/Views/Shared/_Layout.cshtml
+++ b/HospiFication/Views/Shared/_Layout.cshtml
@@ -44,6 +44,9 @@
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Patients">Пациенты</a>
                                 </li>
                                 <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Medicines">Список лекарственных препаратов</a>
+                                </li>
+                                <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Logout">Выход</a>
                                 </li>
                             }
