--- a/HospiFication/Views/Home/AddNotification.cshtml
+++ b/HospiFication/Views/Home/AddNotification.cshtml
@@ -26,6 +26,6 @@
         </div>
         
         <div class="form-group">
-            <input type="submit" value="Отправить" class="btn btn-default" />
+            <input type="submit" value="Отправить" class="btn btn-light" />
         </div>
     </form>
