--- a/HospiFication/Views/Home/AddPatient.cshtml
+++ b/HospiFication/Views/Home/AddPatient.cshtml
@@ -41,7 +41,7 @@
         </div>
 
         <div class="form-group">
-            <input type="submit" value="Отправить" class="btn btn-default" />
+            <input type="submit" value="Отправить" class="btn btn-light" />
         </div>
         <div class="form-group">
             <a asp-action="Index" class="btn btn-primary">Назад</a>
