--- a/HospiFication/Views/Home/DeleteAttend.cshtml
+++ b/HospiFication/Views/Home/DeleteAttend.cshtml
@@ -20,7 +20,7 @@
 	<div>
 		<form asp-controller="Home" asp-action="DeleteAttend" method="post">
 			<div class="form-group">
-				<input type="submit" class="btn btn-default" value="Удалить" />
+				<input type="submit" class="btn btn-light" value="Удалить" />
 			</div>
 		</form>
         <div class="form-group">
