--- a/HospiFication/Views/Home/EditAttendDocPass.cshtml
+++ b/HospiFication/Views/Home/EditAttendDocPass.cshtml
@@ -14,7 +14,7 @@
         <input type="text" asp-for="Password" class="form-control" />
     </div>
     <div class="form-group">
-        <input type="submit" value="Сохранить" class="btn btn-default" />
+        <input type="submit" value="Сохранить" class="btn btn-light" />
     </div>
 </form>
         <div class="form-group">
