--- a/HospiFication/Views/Home/EditPatientAttendDoc.cshtml
+++ b/HospiFication/Views/Home/EditPatientAttendDoc.cshtml
@@ -19,7 +19,7 @@
         <select asp-for="AttendingDocID" asp-items="Model.AttendingDocIDs" class="form-control" ></select>
     </div>
     <div class="form-group">
-        <input type="submit" value="Сохранить" class="btn btn-default" />
+        <input type="submit" value="Сохранить" class="btn btn-light" />
     </div>
 </form>
         <div class="form-group">
