--- a/HospiFication/Views/Home/Extract.cshtml
+++ b/HospiFication/Views/Home/Extract.cshtml
@@ -26,7 +26,18 @@
         </div>
         
         <div class="form-group">
-            <input type="submit" value="Отправить" class="btn btn-default" />
+            <label asp-for="Medicines" class="control-label">Лекарства</label>
+        @for (var index = 0; index < 10; index++)
+        {
+           <div class="form-group">
+           <select asp-for="Medicines" asp-items="Model.MedicineIDs" id="Meds" name="Meds"></select> 
+           </div>
+        }
+
+        </div>
+
+        <div class="form-group">
+            <input type="submit" value="Отправить" class="btn btn-light" />
         </div>
     </form>
         <div class="form-group">
