--- a/HospiFication/Views/Home/Login.cshtml
+++ b/HospiFication/Views/Home/Login.cshtml
@@ -1,5 +1,5 @@
 ﻿@model HospiFication.Models.LoginModel
- 
+<link rel="stylesheet" href="~/css/StyleSheet.scss" /> 
 <h2>Вход на сайт</h2>
   
 <form asp-action="Login" asp-controller="Home" asp-anti-forgery="true">
@@ -16,7 +16,7 @@
             <span asp-validation-for="Password" />
         </div>
         <div class="form-group">
-            <input type="submit" value="Войти" class="btn" />
+            <input type="submit" value="Войти" class="btn btn-primary" />
         </div>
     </div>
 </form>
