--- a/HospiFication/Views/Shared/_Layout.cshtml
+++ b/HospiFication/Views/Shared/_Layout.cshtml
@@ -69,6 +69,9 @@
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="EmergeDocs">Врачи приёмного отделения</a>
                                 </li>
                                 <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Sync">Синхронизация с 1С</a>
+                                </li>
+                                <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Logout">Выход</a>
                                 </li>
                             }
@@ -111,7 +114,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2022 - HospiFication - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>	
+            &copy; 2024 - HospiFication - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>	
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
